Fix word wrap in lists

--- a/Site/src/app/storage/storage.component.css
+++ b/Site/src/app/storage/storage.component.css
@@ -32,6 +32,9 @@
   display: block;
   margin: 0px auto auto auto;
 }
+dl {
+  white-space: nowrap;
+}
 dt {
   margin: auto auto auto 10%;
 }
